# libsdi-svn

trunk/: AUTHORS  COPYING  FAQ  Makefile.am  README  configure.ac
trunk/cmd/: Makefile.am  sditool.c
trunk/include/: libsdi-internal.h  libsdi.h  sdi.h
trunk/lib/: Makefile.am  libsdi.c
trunk/test/: Makefile.am
web/: index.html  libsdi.h.html  sdi.h.html
web/include/: andrew-libsdi-email.js
